# pyproject.toml  (preferred for new projects, PEP 621)

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baselib"
version = "1.4"
description = "A base library for various utilities"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name = "Daniel Balparda", email = "balparda@gmail.com" }
]
requires-python = ">=3.13.5"
dependencies = [
  "coverage>=7.8.2",
  "tomli>=2.2.1",
  "cryptography>=41.0.7",
  "Pillow>=10.2.0"
]

# test with:
# $ python3
# >>> import sys, tomli, pathlib
# >>> tomli.loads(pathlib.Path('pyproject.toml').read_text())
